css/main.css
body {
  padding-top: 10px;
  position: relative;
}

.no-margin {
  margin: 0;
}

.inline {
  display: inline-block;
}

.placeholder {
  height: 200px;
  padding-top: 70px;
  border-radius: 5px;
  overflow: hidden;
  background: #F2F2F2;
  display: block;
  text-align: center;
}

/*
* HEADER
*/

.header-dropdown {
  margin-top: 13px;
}
.header-dropdown button {
  background: none;
  border: none;
  color: #FFF;
}
.header-dropdown-menu {
  background-color: #222; 
}
.header-dropdown-menu>li>a {
  color: #FFF;
}

.loading:after {
  content: ' ';
  width: 32px;
  height: 32px;
  margin: auto;
  display: block;
  background: url(../img/loading.gif) no-repeat;
}

.navbar-fixed-top {
  z-index: 2030;
}

.nav-loading.loading {
  position: absolute;
  top: 8px;
  left: 50%;
}

.nav-loading.loading:after {
  background: url(../img/navloading.gif) no-repeat;
}

@media (max-width: 970px) {
  .nav-loading.loading {
    left: 60%;
  }
}

/*
* SUPERMARKETS
*/

.supermarket {
  padding-top: 50px;
}

@media (max-width: 768px) {
  .nav-loading.loading {
    left: 50%;
  }
  .supermarket h1 {
    font-size: 27px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: inline;
  }
}

.supermarket-items {
  margin-top: 15px;
  min-height: 200px;
  overflow: hidden;
}

.supermarket-items > div {
  margin-bottom: 15px;
  max-height: 510px;
  overflow: hidden;
}

.supermarket-items iframe {
  border: 1px solid #EBEBEB;
  border-radius: 4px;
}

.supermarket-items > .loading:after {
  margin-top: 18px;
}

.actions {
  margin-top: 38px;
  text-align: right;
}

.actions a:link {
    text-decoration: none;
}

@media (max-width: 768px) {
  .actions {
    margin-top: 9px;
    font-size: 13px;
  }
}

/*
* IMAGE GALLERY
*/

.supermarket-items [data-lightbox]:after {
    content: "ZOOM";
    padding: 5px 7px 4px;
    top: 7px;
    left: 7px;
    position: absolute;
    border-radius: 5px 0px 0px 5px;

    display: block;
    opacity: 0;

    font-weight: 400;
    font-style: normal;
    font-size: 11px;
    line-height: 1;

    background: #D94F5C;
    color: #FFFFFF;

    pointer-events: none;
    -moz-transition: all 0.5s cubic-bezier( 0.5, 0.2, 0.5, 1 );
    -o-transition: all 0.5s cubic-bezier( 0.5, 0.2, 0.5, 1 );
    -webkit-transition: all 0.5s cubic-bezier( 0.5, 0.2, 0.5, 1 );
    transition: all 0.5s cubic-bezier( 0.5, 0.2, 0.5, 1 );
}
.supermarket-items a:hover:after {
  opacity: 1
}


.lb-data .lb-close {
  top: -20px;
  right: 20px;
  position: absolute;
  opacity: 1;
}
.lb-data .lb-close:hover {
  opacity: 0.7;
}

@media (max-width: 768px) {
  .lb-data .lb-close {
    top: -50px;
  }
}

.lb-nav {
  height: inherit;
  top: inherit;
  bottom: -65px;
}
.lb-container .lb-nav a {
  height: 40px;
  opacity: 1;
}
.lb-container .lb-nav a:hover {
  opacity: 0.7;
}

.lb-data .lb-details {
  width: 100%;
  text-align: center;
}
.lb-data .lb-number {
  font-size: 16px;
  bottom: -33px;
  position: relative;
  color: #FFF;
}

/*
* FOOTER
*/

footer {
  margin-top: 20px;
}

footer .footer-row {
  padding: 18px 0;
}

/*
* SOCIAL BUTTONS
*/

.social-buttons { display: block; list-style: none; margin-top: 15px; padding: 0; }
.social-buttons > li { display: block; margin: 0; padding-right: 10px; float: left; overflow: hidden; }
.social-buttons .socialite { display: block; position: relative; background: url('../img/social-sprite.png') 0 0 no-repeat; }
.social-buttons .socialite-loaded { background: none !important; }

.social-buttons .twitter-share { width: 70px; height: 20px; background-position: 12px -1px; }
.social-buttons .facebook-share { width: 80px; height: 20px; background-position: -57px -1px; }

.social-buttons .preciosclaros {
  color: #9d9d9d;
  overflow: hidden;
  display: inline-block;
  padding-top: 3px;
}
.social-buttons .preciosclaros:hover {
  color: #FFF;
  text-decoration: none;
}


/*
* SANE BOOTSTRAP
*/

@media (max-width: 768px) {
  .inline.visible-xs {
    display: inline-block!important;
  }
}

